gitops/service-deploy/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-quarkus-service
    app.openshift.io/runtime: quarkus
  name: simple-quarkus-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-quarkus-service
  template:
    metadata:
      labels:
        app: simple-quarkus-service
    spec:
      containers:
        - name: simple-quarkus-service
          image: quay.io/froberge/simple-quarkus-service:v3
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 5
status: {}
